<resources>
    <string name="app_name">eMedicoz</string>

    <!-- FACEBOOK APP ID -->
    <string name="facebook_app_id">1727329897559970</string>
    <string name="fb_login_protocol_scheme">fb1727329897559970</string>

    <string name="allcourses">All Courses</string>
    <string name="mycourse">My Courses</string>
    <string name="feeds">Feeds</string>
    <string name="savedNotes">Saved Notes</string>
    <string name="course">Courses</string>
    <string name="rewardsCoin">Rewards Coins</string>
    <string name="feedback">Feedback</string>
    <string name="rateUs">Rate Us</string>
    <string name="support">Support</string>
    <string name="appSettings">App Settings</string>
    <string name="Settings">Settings</string>
    <string name="referEarn">Refer &amp; Earn</string>
    <string name="termsPolicy">Terms &amp; Policy</string>
    <string name="logout">Logout</string>
    <string name="deleteMessage">Are you sure, You want to delete this post?</string>
    <string name="choose_image">Choose your image from</string>
    <string name="choose_media">Choose Media</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="reset_password">RESET PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="verfiy">VERIFY</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOG IN</string>

    <string name="changepassowrd_new_password">New Password</string>
    <string name="changepassowrd_retype_password">Retype Password</string>

    <string name="enter_phonenumber">Enter your phone number</string>
    <string name="forgetpassword_otp_message">OTP will be sent to your Phone number</string>
    <string name="mobile_no_message">Enter the Phone number that you registered with eMedicoz</string>

    <string name="mobileverification_verificationmessage">Please enter your mobile number for verification</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>

    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>

    <string name="signup_referralcode">Enter Referral Code!</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="are_you_a_dams_student">Are You a DAMS Student?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_with_social_media">Sign Up With Social Media</string>
    <string name="write_your_post_here">Write your post here</string>
    <string name="write_your_question_here">"Write your question here"</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="post">POST</string>
    <string name="next">NEXT</string>
    <string name="aws_pool_id">MY-IDENTITY-POOL-ID</string>
    <string name="welcome_to_emedicoz">Welcome To eMedicoz</string>
    <string name="notification">Notification</string>
    <string name="type_here">Type here</string>
    <string name="choose_section">Choose Section</string>
    <string name="add_title">Add title</string>
    <string name="add_description">Add description</string>
    <string name="change_password">Change Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="professional_stream">Professional Stream</string>
    <string name="new_post">New Post</string>
    <string name="comments">Comments</string>
    <string name="notifications">Notifications</string>
    <string name="video">Video</string>

    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>

    <string name="title_activity_video">Video</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="add_media">Add Media</string>
    <string name="attach">Attach</string>
    <string name="add_question">Add Question</string>
    <string name="add_tag">Add Tag</string>
    <string name="remove_question">Remove Question</string>
    <string name="jsonparsing_error_message">Something went wrong with server</string>
    <string name="exception_api_error_message">Something went wrong kindly try again</string>
    <string name="you_cannot_add_more_opt">You cannot add more options</string>
    <string name="no_more_opt_to_remov">No options to remove</string>
    <string name="you_cannot_add_more_media">You cannot add other Media</string>
    <string name="people_you_may_know">People You May Know</string>
    <string name="ad_banner">Advertisement</string>
    <string name="no_data_found">No Data Found</string>
    <string name="please_select_the_stream">Please select the Stream</string>
    <string name="please_select_the_substream">Please select the Sub Stream</string>
    <string name="please_select_the_specialisation">Please select the Specialisation</string>
    <string name="please_select_the_option">Please select the option</string>
    <string name="no_data_changed">No Data Changed</string>
    <string name="no_comments_found">No Comments Found</string>
    <string name="pdf_extension">.pdf</string>
    <string name="doc_extension">.doc</string>
    <string name="xls_extension">.xls</string>
    <string name="file_format_error">This file format is not supported</string>
    <string name="liked_your_post">" liked your post."</string>
    <string name="commented_your_post">" commented on your post."</string>
    <string name="shared_your_post">" has shared your post."</string>
    <string name="following_you">" has started following you."</string>
    <string name="select_option">Select Option</string>
    <string name="logout_confirmation_message">Do you really want to logout?</string>
    <string name="logout_title">Logout</string>
    <string name="rotate">Rotate</string>
    <string name="verifying_your_number_n_we_have_sent_an_otp_on_your_number">Verify your Phone number!\n We have sent an OTP on your registered Phone number</string>
    <string name="description">Description</string>
    <string name="subject">Subject</string>
    <string name="discuss_medical_cases_mcqs"><![CDATA[DISCUSS MEDICAL CASES & MCQs]]></string>
    <string name="demo_screen4_text"><![CDATA[From Xrays, CT scans and ECGs to multiple choice questions for NEETPG & USMLE, eMedicoz helps you discuss relevant medical cases sorted by specialty and at all grades.]]></string>
    <string name="demo_screen3_text">eMedicoz is the simple way to share and discuss clinical images and questions.</string>
    <string name="no_feeds_found">No Feeds Found</string>
    <string name="no_following_found">No Following Found</string>
    <string name="no_followers_found">No Followers Found</string>
    <string name="dams_roll_no">DAMS Roll No.</string>
    <string name="update_app_dialog_title">Update App</string>
    <string name="update_app_dialog_message">You are using older version of app.\nKindly update it from PlayStore.</string>
    <string name="enter_your_dams_roll_number">Enter your roll number</string>
    <string name="read_more">Read More</string>
    <string name="instructor">Instructor</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="no_question_with_media">You cannot add Question with the media attached</string>
    <string name="no_media_with_question">You cannot add Media with the question</string>

                            <!--JWPlayer-->
    <string name="YOUR_LICENSE_KEY">/JFSZ5yP9bbKb+ASKSmzu2hEcZGmlvLN6lMa/g==</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewAll">View All</string>

</resources>
