<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/mobile_no_message"
            android:textColor="@color/black"
            android:textSize="@dimen/heading_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <EditText
                    android:id="@+id/phonenumberTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/phone"
                    android:drawablePadding="17dp"
                    android:hint="@string/enter_phonenumber"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingTop="2dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp40"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_signup_btn"
                android:elevation="4dp"
                android:paddingLeft="@dimen/normal_button_padding_left_right"
                android:paddingRight="@dimen/normal_button_padding_left_right"
                android:text="@string/reset_password"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:alpha="0.9"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/forgetpassword_otp_message"
                android:textColor="@color/black" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
