<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_verification"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:alpha="0.9"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/mobileverification_verificationmessage"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <EditText
                    android:id="@+id/mobileET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/phone"
                    android:drawablePadding="17dp"
                    android:hint="@string/enter_phonenumber"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/verifyBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp40"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_signup_btn"
                android:elevation="4dp"
                android:paddingLeft="@dimen/normal_button_padding_left_right"
                android:paddingRight="@dimen/normal_button_padding_left_right"
                android:text="@string/verfiy"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>