<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <EditText
                    android:id="@+id/newpasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/lock"
                    android:drawablePadding="17dp"
                    android:hint="@string/changepassowrd_new_password"
                    android:inputType="textPassword"
                    android:paddingTop="2dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <EditText
                    android:id="@+id/retrypasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/lock"
                    android:drawablePadding="17dp"
                    android:hint="@string/changepassowrd_retype_password"
                    android:inputType="textPassword"
                    android:paddingTop="2dp"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp40"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_signup_btn"
                android:elevation="4dp"
                android:paddingLeft="@dimen/normal_button_padding_left_right"
                android:paddingRight="@dimen/normal_button_padding_left_right"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
