<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <com.emedicoz.app.views.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:backgroundColor="@color/black"
        custom:frameColor="@color/white"
        custom:frameStrokeWeight="1dp"
        custom:guideColor="@color/white"
        custom:guideShowMode="show_on_touch"
        custom:guideStrokeWeight="1dp"
        custom:handleColor="@color/white"
        custom:handleShowMode="show_always"
        custom:handleSize="8dp"
        custom:minFrameSize="50dp"
        custom:overlayColor="@color/overlay"
        custom:touchPadding="8dp" />

    <LinearLayout
        android:id="@+id/cropFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/buttonCancleCrop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"
            android:paddingBottom="1dp"
            android:paddingTop="1dp" />

        <Button
            android:id="@+id/rotate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/rotate"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"
            android:paddingBottom="1dp"
            android:paddingTop="1dp" />

        <Button
            android:id="@+id/buttonSaveImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/imageProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</RelativeLayout>
