<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/RL1"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"></RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/postFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/RL1"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:src="@mipmap/writeicon"
        app:fabSize="normal" />

    <LinearLayout
        android:id="@+id/RL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/dp4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/feedsLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/dp2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:padding="@dimen/dp5"
                android:src="@mipmap/feeds_menu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/feeds"
                android:textColor="@color/black"
                android:textSize="@dimen/extrasmall_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/helpLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/dp2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:padding="@dimen/dp5"
                android:src="@mipmap/help_menu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="@dimen/extrasmall_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/dp2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:padding="@dimen/dp5"
                android:src="@mipmap/settings_menu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Settings"
                android:textColor="@color/black"
                android:textSize="@dimen/extrasmall_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/savenotesLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/dp2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:padding="@dimen/dp5"
                android:src="@mipmap/saved_notes_menu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/savedNotes"
                android:textColor="@color/black"
                android:textSize="@dimen/extrasmall_text_size" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>